[package]
name = "nanovec"
version = "0.1.1"
edition = "2021"
authors = ["summivox <summivox@gmail.com>"]

description = "Space-saving packed arrays and Vec-likes of small integers."
repository = "https://github.com/summivox/nanovec-rs.git"
keywords = ["array", "vec", "compact", "bit-pack", "radix"]
categories = ["compression", "data-structures", "no-std", "embedded"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }
