[package]
name = "nanovec"
version = "0.2.0"
edition = "2021"
authors = ["summivox <summivox@gmail.com>"]

description = "Arrays and Vec-likes of small integers packed in an integer or two."
repository = "https://github.com/summivox/nanovec-rs.git"
keywords = ["array", "vec", "compact", "bit-pack", "radix"]
categories = ["compression", "data-structures", "no-std", "embedded"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }
replace_with = { version = "0.1.7", default-features = false }
